--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- 搜尋輸入框與按鈕 -->
     <div class="flex flex-col md:flex-row gap-4 mb-6 animate-fade-in-up">
-      <input type="text" id="searchInput" placeholder="例如：台積電最新股價分析"
+      <input type="text" id="searchInput" placeholder="請輸入內容 ..."
              class="flex-1 p-3 bg-[#1f1f1f] text-white border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 transition-all"/>
       <button id="searchButton"
               class="bg-gradient-to-r from-cyan-500 to-blue-500 text-white font-semibold py-3 px-6 rounded-lg hover:from-cyan-400 hover:to-blue-400 transition-all shadow-lg">
